# kattis-client

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
examples/aaah/: kattis.yml  main.rs
examples/kattis/: kattis-global.yml
examples/kattis/credentials/: open.kattis.com
examples/kattis/templates/rust/: kattis.yml  main.rs
src/: args.rs  config.rs  credentials.rs  error.rs  language.rs  macros.rs  main.rs  query.rs  session.rs  util.rs
