[package]
name = "kattis"
version = "0.2.3"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Manage Kattis submissions, samples and templates from the terminal."
readme = "README.md"
homepage = "https://github.com/nolanderc/kattis-client"
repository = "https://github.com/nolanderc/kattis-client"
keywords = ["cli", "kattis", "submit", "test", "samples"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.2.16"
failure = "0.1.5"
reqwest = "0.9.18"
serde = "1.0.92"
serde_derive = "1.0.92"
dirs = "2.0.1"
serde_yaml = "0.8.9"
derive_more = "0.15.0"
zip = "0.5.2"
fs_extra = "1.2.0"
select = "0.4.2"
regex = "1.1.7"
notify = "4.0.12"
crossterm = "0.11.1"
